Moving files to source folder

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 
 <div id="video1">
-<video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="Book-lover.mp4"></video>
+<video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/Book-lover.mp4"></video>
 </div>
 <div id="mainText">
 	<div id="intro"> <span> Hi, I'm </span> </div>
@@ -30,7 +30,7 @@
 
 <div id="aboutBox"></div>
 <div id="video2">
-<video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="Graduation.mp4"></video>
+<video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/Graduation.mp4"></video>
 
 <!-- Extracurriculars page -->
 
@@ -42,7 +42,7 @@
 <span id="circle6"></span>
 
 <div id="video3">
-<video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="Volunteering.mp4"></video>
+<video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/Volunteering.mp4"></video>
 
 <!-- Projects Page -->
 
