add new pages and format with videos

--- a/index.html
+++ b/index.html
@@ -46,14 +46,23 @@
 
 <!-- Projects Page -->
 
-<span id="block1"></span>
+<!-- <span id="block1"></span>
 <span id="block2"></span>
 <span id="block3"></span>
 <span id="block4"></span>
 <span id="block5"></span>
 <span id="block6"></span>
+ -->
+<div class="projects"> <h1 class="projectsText"> This is Project 1 </h1>
+</div>
+<div id="video4">
+<video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/Scrum-board.mp4"></video>
 
+  <!-- Contact Page -->
 
+  <div id="video5">
+<video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/About-us.mp4"></video>
 
+<div id="downloadButton"> <!-- <span id=resume>  -->Download Resume<!--  </span>  --></div>
 </body>
 </html>
