make separate divs for pages and edit navbar

--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 <body>
 
 <!-- Home Page -->
+
+<a name=”Top”></a>
+<div id="home">
 <div id="above"></div>
 <div id="navbar" toggle= "collapsed">
-  <span class="navbarText"> Home </span>
-  <span class="navbarText"> About </span>
-  <span class="navbarText"> Extracurriculars </span>
-  <span class="navbarText"> Projects </span>
-  <span class="navbarText"> Contact </span> 
-</div>
+  <span class="navbarText"> <a href="#Top"> Home </a> </span>
+  <span class="navbarText"> <a href="#about"> About </a> </span>
+  <span class="navbarText"> <a href="#exc"> Extracurriculars </a></span>
+  <span class="navbarText"> <a href="#projectsPage"> Projects </a></span>
+  <span class="navbarText"> <a href="#contact"> Contact </a> </span> 
+</div> 
 
 <div id="video1">
 <video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/Book-lover.mp4"></video>
@@ -25,15 +28,19 @@
 	<div id="intro"> <span> Hi, I'm </span> </div>
 	<div id="firstName"><span> ARSHNOOR </span> </div>
 	<div id="lastName"><span> KAUR </span> </div> 
-</div>
+</div> </div>
+
 <!-- About Page -->
 
+<div id="about">
 <div id="aboutBox"></div>
 <div id="video2">
 <video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/Graduation.mp4"></video>
+</div></div>
 
 <!-- Extracurriculars page -->
 
+<div id="exc">
 <span id="circle1"></span>
 <span id="circle2"></span>
 <span id="circle3"></span>
@@ -43,26 +50,23 @@
 
 <div id="video3">
 <video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/Volunteering.mp4"></video>
+</div></div>
 
 <!-- Projects Page -->
 
-<!-- <span id="block1"></span>
-<span id="block2"></span>
-<span id="block3"></span>
-<span id="block4"></span>
-<span id="block5"></span>
-<span id="block6"></span>
- -->
+<div id="projectsPage">
 <div class="projects"> <h1 class="projectsText"> This is Project 1 </h1>
 </div>
 <div id="video4">
 <video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/Scrum-board.mp4"></video>
+</div></div>
 
-  <!-- Contact Page -->
+<!-- Contact Page -->
 
+<div id="contact">
   <div id="video5">
-<video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/About-us.mp4"></video>
+<video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/About-us.mp4"></video></div>
+<div id="downloadButton">Download Resume <a href="https://www.linkedin.com/in/arshnoorkaur/"></a></div></div>
 
-<div id="downloadButton"> <!-- <span id=resume>  -->Download Resume<!--  </span>  --></div>
 </body>
 </html>
