fix margins and add bio

--- a/index.html
+++ b/index.html
@@ -7,39 +7,42 @@
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=PT+Sans+Caption" />
 </head>
 <body>
-
+ 
 <!-- Home Page -->
-
+ 
 <a name=”Top”></a>
-<div id="home">
-<div id="above"></div>
 <div id="navbar" toggle= "collapsed">
   <span class="navbarText"> <a href="#Top"> Home </a> </span>
   <span class="navbarText"> <a href="#about"> About </a> </span>
   <span class="navbarText"> <a href="#exc"> Extracurriculars </a></span>
   <span class="navbarText"> <a href="#projectsPage"> Projects </a></span>
-  <span class="navbarText"> <a href="#contact"> Contact </a> </span> 
-</div> 
-
+  <span class="navbarText"> <a href="#contact"> Contact </a> </span>
+</div>
+<div id="home">
+<div id="above"></div>
+ 
+ 
 <div id="video1">
 <video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/Book-lover.mp4"></video>
 </div>
 <div id="mainText">
-	<div id="intro"> <span> Hi, I'm </span> </div>
-	<div id="firstName"><span> ARSHNOOR </span> </div>
-	<div id="lastName"><span> KAUR </span> </div> 
+    <div id="intro"> <span> Hi, I'm </span> </div>
+    <div id="firstName"><span> ARSHNOOR </span> </div>
+    <div id="lastName"><span> KAUR </span> </div>
 </div> </div>
-
+ 
 <!-- About Page -->
-
+ 
 <div id="about">
-<div id="aboutBox"></div>
+<div id="aboutBox">
+  <p id="aboutText"> Hi! My name is Arshnoor Kaur. I am a rising senior at Garfield High School in Seattle, WA. I love to volunteer and I am passionate about helping others. I am currently a member of Richards Rwanda where we work towards raising money to help young women in Rwanda find jobs in order for them to sustain a stable and independent lifestyle.I was also a member of Key Club and held the officer position of project planning during the summer of 2019. I have taken many AP's and always like to challenge myself in and outside of school. I am especially interested in Computer Science and front-end designing and I hope to pursue this interest in college as well. To learn more about this field, I joined the Girls Who Code Chapter at my school and also got accepted into the GWC Summer Immersion Program. </p>
+</div>
 <div id="video2">
 <video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/Graduation.mp4"></video>
 </div></div>
-
+ 
 <!-- Extracurriculars page -->
-
+ 
 <div id="exc">
 <span id="circle1"></span>
 <span id="circle2"></span>
@@ -47,26 +50,26 @@
 <span id="circle4"></span>
 <span id="circle5"></span>
 <span id="circle6"></span>
-
+ 
 <div id="video3">
 <video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/Volunteering.mp4"></video>
 </div></div>
-
+ 
 <!-- Projects Page -->
-
+ 
 <div id="projectsPage">
 <div class="projects"> <h1 class="projectsText"> This is Project 1 </h1>
 </div>
 <div id="video4">
 <video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/Scrum-board.mp4"></video>
 </div></div>
-
+ 
 <!-- Contact Page -->
-
+ 
 <div id="contact">
   <div id="video5">
 <video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/About-us.mp4"></video></div>
 <div id="downloadButton">Download Resume <a href="https://www.linkedin.com/in/arshnoorkaur/"></a></div></div>
-
+ 
 </body>
 </html>
