fix navbar and add flexbox

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=PT+Sans+Caption" />
 </head>
-<body>
+<body class="body">
  
 <!-- Home Page -->
  
@@ -35,7 +35,7 @@
  
 <div id="about">
 <div id="aboutBox">
-  <p id="aboutText"> Hi! My name is Arshnoor Kaur. I am a rising senior at Garfield High School in Seattle, WA. I love to volunteer and I am passionate about helping others. I am currently a member of Richards Rwanda where we work towards raising money to help young women in Rwanda find jobs in order for them to sustain a stable and independent lifestyle.I was also a member of Key Club and held the officer position of project planning during the summer of 2019. I have taken many AP's and always like to challenge myself in and outside of school. I am especially interested in Computer Science and front-end designing and I hope to pursue this interest in college as well. To learn more about this field, I joined the Girls Who Code Chapter at my school and also got accepted into the GWC Summer Immersion Program. </p>
+  <p id="aboutText"> Hi! My name is Arshnoor Kaur. I am a rising senior at Garfield High School in Seattle, WA. I love to volunteer and I am passionate about helping others. I am currently a member of Richards Rwanda where we work towards raising money to help young women in Rwanda find jobs in order for them to sustain a stable and independent lifestyle. I was also a member of Key Club and held the officer position of project planning during the summer of 2019. I have taken many AP's and always like to challenge myself in and outside of school. I am especially interested in Computer Science and front-end designing and I hope to pursue this interest in college as well. To learn more about this field, I joined the Girls Who Code Chapter at my school and also got accepted into the GWC Summer Immersion Program. </p>
 </div>
 <div id="video2">
 <video type=video/mp4 autoplay="autoplay" loop="loop" muted><source src="assets/Graduation.mp4"></video>
@@ -43,7 +43,7 @@
  
 <!-- Extracurriculars page -->
  
-<div id="exc">
+<div class="exc">
 <span id="circle1"></span>
 <span id="circle2"></span>
 <span id="circle3"></span>
