--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  
 <!-- Extracurriculars page -->
  
-<div class="exc">
+<div id="exc">
 <span id="circle1"></span>
 <span id="circle2"></span>
 <span id="circle3"></span>
